<resources>
    <string name="app_name">jetpack_navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="required">Required</string>
    <string name="password">Password</string>
    <string name="username">Enter Username</string>
    <string name="email">Enter Email</string>
    <string name="phone">Enter Phone No.</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an Account? LOGIN</string>
</resources>